// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tabs Default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Array [
          Object {
            "alignItems": "stretch",
            "backgroundColor": "#ffffff",
            "borderColor": "#b7b7b7",
            "borderStyle": "solid",
            "borderWidth": 1,
            "width": "100%",
          },
          Array [
            Object {},
            undefined,
          ],
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "stretch",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        active={undefined}
        hitSlop={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
        testID={undefined}
      >
        <View
          accessibilityRole="button"
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "alignItems": "stretch",
                  "backgroundColor": "#eef1f3",
                  "borderBottomWidth": 1,
                  "borderColor": "#b7b7b7",
                  "borderRightWidth": 1,
                  "borderStyle": "solid",
                  "flexBasis": 0,
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
                Array [
                  Object {},
                  undefined,
                ],
              ],
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "borderColor": "transparent",
                    "borderStyle": "solid",
                    "borderTopWidth": 4,
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "justifyContent": "center",
                    "marginBottom": 14,
                    "marginHorizontal": 22.75,
                    "paddingTop": 10.5,
                  },
                  undefined,
                ],
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              icon={false}
              style={
                Array [
                  Object {
                    "color": "#333333",
                    "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B, Arial, Georgia, serif",
                    "fontSize": 12.25,
                    "fontWeight": "500",
                  },
                  Array [
                    Object {
                      "color": "#007ac9",
                      "fontSize": 15.75,
                    },
                    undefined,
                  ],
                ]
              }
            >
              FIRST
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        active={undefined}
        hitSlop={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
        testID={undefined}
      >
        <View
          accessibilityRole="button"
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "alignItems": "stretch",
                  "backgroundColor": "#ffffff",
                  "borderBottomColor": "transparent",
                  "borderBottomWidth": 1,
                  "borderColor": "#b7b7b7",
                  "borderRightWidth": 1,
                  "borderStyle": "solid",
                  "flexBasis": 0,
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
                Array [
                  Object {},
                  undefined,
                ],
              ],
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "borderColor": "#007ac9",
                    "borderStyle": "solid",
                    "borderTopWidth": 4,
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "justifyContent": "center",
                    "marginBottom": 14,
                    "marginHorizontal": 22.75,
                    "paddingTop": 10.5,
                  },
                  undefined,
                ],
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              icon={false}
              style={
                Array [
                  Object {
                    "color": "#333333",
                    "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B, Arial, Georgia, serif",
                    "fontSize": 12.25,
                    "fontWeight": "500",
                  },
                  Array [
                    Object {
                      "color": "#333333",
                      "fontSize": 15.75,
                    },
                    undefined,
                  ],
                ]
              }
            >
              SECOND
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        active={undefined}
        hitSlop={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
        testID={undefined}
      >
        <View
          accessibilityRole="button"
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "alignItems": "stretch",
                  "backgroundColor": "#eef1f3",
                  "borderBottomWidth": 1,
                  "borderColor": "#b7b7b7",
                  "borderRightWidth": 1,
                  "borderStyle": "solid",
                  "flexBasis": 0,
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
                Array [
                  Object {},
                  undefined,
                ],
              ],
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "borderColor": "transparent",
                    "borderStyle": "solid",
                    "borderTopWidth": 4,
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "justifyContent": "center",
                    "marginBottom": 14,
                    "marginHorizontal": 22.75,
                    "paddingTop": 10.5,
                  },
                  undefined,
                ],
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              icon={false}
              style={
                Array [
                  Object {
                    "color": "#333333",
                    "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B, Arial, Georgia, serif",
                    "fontSize": 12.25,
                    "fontWeight": "500",
                  },
                  Array [
                    Object {
                      "color": "#007ac9",
                      "fontSize": 15.75,
                    },
                    undefined,
                  ],
                ]
              }
            >
              THIRD
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        active={undefined}
        hitSlop={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
        testID={undefined}
      >
        <View
          accessibilityRole="button"
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "alignItems": "stretch",
                  "backgroundColor": "#eef1f3",
                  "borderBottomWidth": 1,
                  "borderColor": "#b7b7b7",
                  "borderRightWidth": 0,
                  "borderStyle": "solid",
                  "flexBasis": 0,
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
                Array [
                  Object {},
                  undefined,
                ],
              ],
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "borderColor": "transparent",
                    "borderStyle": "solid",
                    "borderTopWidth": 4,
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "justifyContent": "center",
                    "marginBottom": 14,
                    "marginHorizontal": 22.75,
                    "paddingTop": 10.5,
                  },
                  undefined,
                ],
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              icon={false}
              style={
                Array [
                  Object {
                    "color": "#333333",
                    "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B, Arial, Georgia, serif",
                    "fontSize": 12.25,
                    "fontWeight": "500",
                  },
                  Array [
                    Object {
                      "color": "#b7b7b7",
                      "fontSize": 15.75,
                    },
                    undefined,
                  ],
                ]
              }
            >
              DISABLED
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B, Arial, Georgia, serif",
              "fontSize": 12.25,
              "fontWeight": "500",
            },
            undefined,
          ]
        }
      >
        Content of the second tab
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Tabs one item 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Array [
          Object {
            "alignItems": "stretch",
            "backgroundColor": "#ffffff",
            "borderColor": "#b7b7b7",
            "borderStyle": "solid",
            "borderWidth": 1,
            "width": "100%",
          },
          Array [
            Object {},
            undefined,
          ],
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "stretch",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        active={undefined}
        hitSlop={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
        testID={undefined}
      >
        <View
          accessibilityRole="button"
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "alignItems": "stretch",
                  "backgroundColor": "#ffffff",
                  "borderBottomColor": "transparent",
                  "borderBottomWidth": 1,
                  "borderColor": "#b7b7b7",
                  "borderRightWidth": 0,
                  "borderStyle": "solid",
                  "flexBasis": 0,
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
                Array [
                  Object {},
                  undefined,
                ],
              ],
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "borderColor": "#007ac9",
                    "borderStyle": "solid",
                    "borderTopWidth": 4,
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "justifyContent": "center",
                    "marginBottom": 14,
                    "marginHorizontal": 22.75,
                    "paddingTop": 10.5,
                  },
                  undefined,
                ],
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              icon={false}
              style={
                Array [
                  Object {
                    "color": "#333333",
                    "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B, Arial, Georgia, serif",
                    "fontSize": 12.25,
                    "fontWeight": "500",
                  },
                  Array [
                    Object {
                      "color": "#333333",
                      "fontSize": 15.75,
                    },
                    undefined,
                  ],
                ]
              }
            >
              ACTIVE
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B, Arial, Georgia, serif",
              "fontSize": 12.25,
              "fontWeight": "500",
            },
            undefined,
          ]
        }
      >
        Content of active tab
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Tabs rounded 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Array [
          Object {
            "alignItems": "stretch",
            "backgroundColor": "#ffffff",
            "borderColor": "#b7b7b7",
            "borderRadius": 5.25,
            "borderStyle": "solid",
            "borderWidth": 1,
            "width": "100%",
          },
          Array [
            Object {},
            undefined,
          ],
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "stretch",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        active={undefined}
        hitSlop={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
        testID={undefined}
      >
        <View
          accessibilityRole="button"
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "alignItems": "stretch",
                  "backgroundColor": "#eef1f3",
                  "borderBottomWidth": 1,
                  "borderColor": "#b7b7b7",
                  "borderRightWidth": 1,
                  "borderStyle": "solid",
                  "borderTopLeftRadius": 6,
                  "flexBasis": 0,
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
                Array [
                  Object {},
                  undefined,
                ],
              ],
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "borderColor": "transparent",
                    "borderStyle": "solid",
                    "borderTopWidth": 4,
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "justifyContent": "center",
                    "marginBottom": 14,
                    "marginHorizontal": 22.75,
                    "paddingTop": 10.5,
                  },
                  undefined,
                ],
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              icon={false}
              style={
                Array [
                  Object {
                    "color": "#333333",
                    "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B, Arial, Georgia, serif",
                    "fontSize": 12.25,
                    "fontWeight": "500",
                  },
                  Array [
                    Object {
                      "color": "#007ac9",
                      "fontSize": 15.75,
                    },
                    undefined,
                  ],
                ]
              }
            >
              FIRST
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        active={undefined}
        hitSlop={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
        testID={undefined}
      >
        <View
          accessibilityRole="button"
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "alignItems": "stretch",
                  "backgroundColor": "#ffffff",
                  "borderBottomColor": "transparent",
                  "borderBottomWidth": 1,
                  "borderColor": "#b7b7b7",
                  "borderRightWidth": 1,
                  "borderStyle": "solid",
                  "flexBasis": 0,
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
                Array [
                  Object {},
                  undefined,
                ],
              ],
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "borderColor": "#007ac9",
                    "borderStyle": "solid",
                    "borderTopWidth": 4,
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "justifyContent": "center",
                    "marginBottom": 14,
                    "marginHorizontal": 22.75,
                    "paddingTop": 10.5,
                  },
                  undefined,
                ],
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              icon={false}
              style={
                Array [
                  Object {
                    "color": "#333333",
                    "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B, Arial, Georgia, serif",
                    "fontSize": 12.25,
                    "fontWeight": "500",
                  },
                  Array [
                    Object {
                      "color": "#333333",
                      "fontSize": 15.75,
                    },
                    undefined,
                  ],
                ]
              }
            >
              SECOND
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        active={undefined}
        hitSlop={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
        testID={undefined}
      >
        <View
          accessibilityRole="button"
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "alignItems": "stretch",
                  "backgroundColor": "#eef1f3",
                  "borderBottomWidth": 1,
                  "borderColor": "#b7b7b7",
                  "borderRightWidth": 1,
                  "borderStyle": "solid",
                  "flexBasis": 0,
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
                Array [
                  Object {},
                  undefined,
                ],
              ],
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "borderColor": "transparent",
                    "borderStyle": "solid",
                    "borderTopWidth": 4,
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "justifyContent": "center",
                    "marginBottom": 14,
                    "marginHorizontal": 22.75,
                    "paddingTop": 10.5,
                  },
                  undefined,
                ],
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              icon={false}
              style={
                Array [
                  Object {
                    "color": "#333333",
                    "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B, Arial, Georgia, serif",
                    "fontSize": 12.25,
                    "fontWeight": "500",
                  },
                  Array [
                    Object {
                      "color": "#007ac9",
                      "fontSize": 15.75,
                    },
                    undefined,
                  ],
                ]
              }
            >
              THIRD
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        active={undefined}
        hitSlop={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
        testID={undefined}
      >
        <View
          accessibilityRole="button"
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "alignItems": "stretch",
                  "backgroundColor": "#eef1f3",
                  "borderBottomWidth": 1,
                  "borderColor": "#b7b7b7",
                  "borderRightWidth": 0,
                  "borderStyle": "solid",
                  "borderTopRightRadius": 6,
                  "flexBasis": 0,
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
                Array [
                  Object {},
                  undefined,
                ],
              ],
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "borderColor": "transparent",
                    "borderStyle": "solid",
                    "borderTopWidth": 4,
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "justifyContent": "center",
                    "marginBottom": 14,
                    "marginHorizontal": 22.75,
                    "paddingTop": 10.5,
                  },
                  undefined,
                ],
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              icon={false}
              style={
                Array [
                  Object {
                    "color": "#333333",
                    "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B, Arial, Georgia, serif",
                    "fontSize": 12.25,
                    "fontWeight": "500",
                  },
                  Array [
                    Object {
                      "color": "#b7b7b7",
                      "fontSize": 15.75,
                    },
                    undefined,
                  ],
                ]
              }
            >
              DISABLED
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B, Arial, Georgia, serif",
              "fontSize": 12.25,
              "fontWeight": "500",
            },
            undefined,
          ]
        }
      >
        Content of the second tab
      </Text>
    </View>
  </View>
</View>
`;
